--- a/pom.xml
+++ b/pom.xml
@@ -68,10 +68,10 @@
             <plugin>
                 <groupId>com.heroku.sdk</groupId>
                 <artifactId>heroku-maven-plugin</artifactId>
-                <version>1.1.3</version>
+                <version>3.0.2</version>
                 <configuration>
                     <jdkVersion>1.8</jdkVersion>
-                    <appName>javalin-heroku-example</appName>
+                    <appName>herokujavalin</appName>
                     <processTypes>
                         <!-- Tell Heroku how to launch your application -->
                         <web>java -jar ./target/HerokuJavalin-1.0-SNAPSHOT-jar-with-dependencies.jar</web>
